# detective-intelligentsia

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.json  requirements.txt
docs/: analytics_queries.sql  story_schema.md
src/detective_bot/: __init__.py  cli.py  config.py  main.py
src/detective_bot/db/: __init__.py  connection.py  repositories.py  schema.sql
src/detective_bot/engine/: __init__.py  conditions.py  exceptions.py  renderer.py  state.py  story_loader.py  validator.py
src/detective_bot/models/: analytics.py  player_state.py  rendered.py  story.py
src/detective_bot/services/: __init__.py  analytics_service.py  game_service.py  story_catalog.py
src/detective_bot/telegram/: __init__.py  callbacks.py  handlers.py  keyboards.py  rendering.py
stories/case_001/: story.yaml
stories/case_001/assets/: ledger_fragment.txt
stories/case_001/scenes/: accusation.yaml  body.yaml  crime_scene.yaml  doorman.yaml  doorman_breaks.yaml  ending_false.yaml  ending_true.yaml  intro.yaml  key_tag.yaml  safe.yaml
stories/case_002/: story.yaml
stories/case_002/assets/: antenna_log.txt
stories/case_002/scenes/: badge.yaml  console.yaml  copied_logs.yaml  ending_secret.yaml  ending_success.yaml  ending_wrong.yaml  hatch.yaml  mast.yaml  station.yaml  technician.yaml  technician_shuts_down.yaml  technician_trusts.yaml  tracks.yaml
stories/case_003_football/: story.yaml
stories/case_003_football/scenes/: betting.yaml  coach.yaml  (+23 more)
tests/: test_database.py  test_engine.py  test_game_service.py  test_story_catalog.py  test_telegram_media.py
